--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,50 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.container {
+  max-width: 500px;
+  display: block;
+  margin: auto;
+}
+
+h2, h3 {
+  text-align: center;
+}
+
+form input {
+  outline: none;
+  width: 100%;
+  height: 40px;
+  border: 1px solid #000000;
+  border-radius: 6px;
+  padding: 0 10px;
+  font-weight: 700;
+  box-sizing: border-box;
+  margin-bottom: 10px;
+}
+
+form button {
+  width: 100%;
+  height: 40px;
+  background: #000000;
+  color: #ffffff;
+  font-weight: 700;
+  outline: none;
+  cursor: pointer;
+  border: none;
+  border-radius: 6px;
+}
+
+.integer {
+  margin-bottom: 50px;
+}
+
+.string {
+  margin-top: 50px;
+  margin-bottom: 50px;
+}
+
+.uuids {
+  margin-top: 50px;
+  margin-bottom: 50px;
 }
